Added Images And Imported Fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   
+   <section>
+      <!-- Nav Bar -->
+      <header>
+         <a href="#" class="logo"><img src="Images/logo.png" alt="starbucks-logo"></a>
+         <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">What's New</a></li>
+            <li><a href="#">Contact</a></li>
+         </ul>
+      </header>
+   </section>
 </body>
 </html>
