Nav Bar Completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <section>
       <!-- Nav Bar -->
       <header>
-         <a href="#" class="logo"><img src="Images/logo.png" alt="starbucks-logo"></a>
+         <a href="#"><img src="Images/logo.png" alt="starbucks-logo" class="logo"></a>
          <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Menu</a></li>
