--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Starbucks</title>
+   <title>Starbucks Clone</title>
    <link rel="stylesheet" href="styles.css">
+   <!-- Favicon -->
+   <link rel="icon" type="image/png" href="Images/logo.png"/>
 </head>
 <body>
    <section>
