--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
    <section>
       <!-- Quadrant -->
       <div class="circle"></div>
+
       <!-- Nav Bar -->
       <header>
          <a href="#"><img src="Images/logo.png" alt="starbucks-logo" class="logo"></a>
-         <ul>
+         <div class="toggle" onclick="toggleMenu()"></div>
+         <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="#">Menu</a></li>
             <li><a href="#">What's New</a></li>
             <li><a href="#">Contact</a></li>
          </ul>
       </header>
+
       <!-- Landing Page -->
       <div class="content">
          <div class="textBox">
